# pdf_processor

./: .gitignore  README.md  pyproject.toml
pdf_processor/: __init__.py  errors.py  main.py  table.py  text.py
tests/: generate_sample_pdf.py  test_pdf_processor.py
